Corrected the boldness heading

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="heading">Partnership</div>
               <hr class="paragraph" />
               <div class="bg-custom">
-                <div>Starting</div>
+                <div class="heading py-20">Starting</div>
                 <div>
                   <span class="price-currency">₹</span
                   ><span class="price">999</span>
@@ -86,7 +86,7 @@
               <div class="heading">Company</div>
               <hr class="paragraph" />
               <div class="bg-custom">
-                <div>Starting</div>
+                <div class="heading py-20">Starting</div>
                 <div>
                   <span class="price-currency">₹</span
                   ><span class="price">5998</span>
@@ -109,7 +109,7 @@
               <div class="heading">Firm</div>
               <hr class="paragraph" />
               <div class="bg-custom">
-                <div>Starting</div>
+                <div class="heading py-20">Starting</div>
                 <div>
                   <span class="price-currency">₹</span
                   ><span class="price">999</span>
